--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@testing-library/cypress": "^8.0.3",
     "bcryptjs": "^2.4.3",
     "cypress": "^10.4.0",
+    "flowbite": "^1.6.5",
+    "flowbite-react": "^0.4.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "tiny-invariant": "^1.2.0"
