--- a/package.json
+++ b/package.json
@@ -34,11 +34,12 @@
     "@supabase/supabase-js": "^1.31.1",
     "@testing-library/cypress": "^8.0.3",
     "bcryptjs": "^2.4.3",
+    "classnames": "^2.3.2",
     "cypress": "^10.4.0",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.0.2",
+    "react-dom": "^18.0.2",
     "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
@@ -47,8 +48,8 @@
     "@remix-run/serve": "^1.6.8",
     "@types/bcryptjs": "^2.4.2",
     "@types/eslint": "^8.4.1",
-    "@types/react": "^17.0.24",
-    "@types/react-dom": "^17.0.9",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
     "cross-env": "^7.0.3",
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.5.0",
